[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orb-telegram-bot"
version = "1.0.0"
description = "ORB Algo Trading Signal Bot for Telegram"
requires-python = ">=3.9"
dependencies = [
    "python-telegram-bot>=20.0",
    "requests>=2.28.0",
]
